[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/GameUI.gd" type="Script" id=2]
[ext_resource path="res://UI/Score.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterTrashLabel" type="Label" parent="."]
margin_left = 352.0
margin_top = 16.0
margin_right = 437.0
margin_bottom = 53.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueChangeSoundEffect" type="AudioStreamPlayer2D" parent="WaterTrashLabel"]
stream = ExtResource( 3 )
